# natual_language_to_sql

./: README.md  app.py  pyproject.toml  ~$architecture.pptx
langgraphsetup/: graph.py  llm.py  tools.py
langgraphsetup/prompts/: agentDefinition.py  finalization.py  queryGeneration.py  tableSelection.py
langgraphsetup/schemas/: airline.txt  airport.txt  hotel.txt  route.txt
